--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -11,10 +11,11 @@
         android:layout_height="wrap_content"
         style="@style/MyCustomTabLayout"
         />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager_newsFg"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.0"
+        android:layout_height="match_parent"
         />
+
 </LinearLayout>
